--- a/redes-sociais/home.html
+++ b/redes-sociais/home.html
@@ -6,9 +6,11 @@
     <title>home</title>
     <link rel="stylesheet" href="estilos/botões.css">
     <style>
-    *{ margin: 0%;
+        
+        *{
+            margin: 0%;
        padding: 0%;
-        }
+        }   
 
         body {
             width: 100vw;
@@ -16,6 +18,8 @@
             background: no-repeat top center black url(imagens/desktop-pc.png);
             background-size: cover;
         }
+
+        
     </style>
 </head>
 <body>
