--- a/redes-sociais/index.html
+++ b/redes-sociais/index.html
@@ -5,15 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes sociais</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <style>
+    </style>
+
+
 </head>
 <body>
     <main>
         <section id="pc">
             <iframe name="tela" id="tela" src="home.html" frameborder="0"></iframe>
-        </section id="bot">
-        <section>
-
+            
         </section>
+        <section  id="bot">
+            <a href="#"><img src="imagens/home.png" alt="home"></a> <br>
+            <a href="#"><img src="imagens/botão-github.png" alt="botão-github"></a> <br>
+            <a href="#"><img src="imagens/botão-linkedin.png" alt="botão-linkedin"></a> <br>
+            <a href="#"><img src="imagens/botão-instagram.webp" alt="botão-instagram"></a><br>
+            <a href="#"><img src="imagens/botão-facebook.webp" alt="botão-facebook"></a>
+        </section>
+        
     </main>
+
 </body>
 </html>
