--- a/redes-sociais/index.html
+++ b/redes-sociais/index.html
@@ -17,11 +17,11 @@
             
         </section>
         <section  id="bot">
-            <a href="#"><img src="imagens/home.png" alt="home"></a> <br>
-            <a href="#"><img src="imagens/botão-github.png" alt="botão-github"></a> <br>
-            <a href="#"><img src="imagens/botão-linkedin.png" alt="botão-linkedin"></a> <br>
-            <a href="#"><img src="imagens/botão-instagram.webp" alt="botão-instagram"></a><br>
-            <a href="#"><img src="imagens/botão-facebook.webp" alt="botão-facebook"></a>
+            <a href="index.html"><img src="imagens/home.png" alt="home"></a> <br>
+            <a target="tela" href="github.html"><img src="imagens/botão-github.png" alt="botão-github"></a> <br>
+            <a target="tela" href="linkedin.html"><img src="imagens/botão-linkedin.png" alt="botão-linkedin"></a> <br>
+            <a target="tela" href="instagram.html"><img src="imagens/botão-instagram.webp" alt="botão-instagram"></a><br>
+            <a target="tela" href="facebook.html"><img src="imagens/botão-facebook.webp" alt="botão-facebook"></a>
         </section>
         
     </main>
