--- a/redes-sociais/github.html
+++ b/redes-sociais/github.html
@@ -1,4 +1,4 @@
-<html lang="pt-br">
+<html lang="br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/botões.css">
 </head>
 <body>
-    <img src="imagens/face-tela.jpg" alt="facebook">
-    <a href="https://www.facebook.com/alex.juniomoreira/">ACESSE</a>
+    <img src="imagens/git-tela.jpg" alt="github">
+    <a target="_blank" href="https://github.com/AlexJjunio">ACESSE</a>
 </body>
 </html>
