--- a/redes-sociais/instagram.html
+++ b/redes-sociais/instagram.html
@@ -1,13 +1,13 @@
-<html lang="pt-br">
+<html lang="br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="estilos/botões.css">
 </head>
 <body>
-    <img src="imagens/face-tela.jpg" alt="facebook">
-    <a href="https://www.facebook.com/alex.juniomoreira/">ACESSE</a>
+    <img src="imagens/insta-tela.jpg" alt="instagram">
+    <a href="https://www.instagram.com/alex_jjunio/">ACESSE</a>
 </body>
 </html>
