--- a/redes-sociais/index.html
+++ b/redes-sociais/index.html
@@ -23,7 +23,7 @@
             <a target="tela" href="instagram.html"><img src="imagens/botão-instagram.webp" alt="botão-instagram"></a><br>
             <a target="tela" href="facebook.html"><img src="imagens/botão-facebook.webp" alt="botão-facebook"></a>
         </section>
-        
+        <footer>By @alex_jjunio</footer>
     </main>
 
 </body>
