--- a/redes-sociais/index.html
+++ b/redes-sociais/index.html
@@ -6,9 +6,27 @@
     <title>Redes sociais</title>
     <link rel="stylesheet" href="estilos/style.css">
     <style>
+        div {
+            position: absolute;
+            background-color: transparent;
+            top: 98%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        div p {
+            text-align: center;
+            opacity: 0.5;
+            transition: 0.5s;
+            color: black;
+            font-family: 'Times New Roman', Times, serif;
+        }
+        
+        div p:hover {
+            opacity: 1;
+        }
+
     </style>
-
-
 </head>
 <body>
     <main>
@@ -23,7 +41,9 @@
             <a target="tela" href="instagram.html"><img src="imagens/botão-instagram.webp" alt="botão-instagram"></a><br>
             <a target="tela" href="facebook.html"><img src="imagens/botão-facebook.webp" alt="botão-facebook"></a>
         </section>
-        <footer>By @alex_jjunio</footer>
+        <div>
+            <p>Feito com muito carinho @alex_jjunio 🖤</p>
+        </div>
     </main>
 
 </body>
