--- a/redes-sociais/index.html
+++ b/redes-sociais/index.html
@@ -9,7 +9,7 @@
         div {
             position: absolute;
             background-color: transparent;
-            top: 98%;
+            top: 85%;
             left: 50%;
             transform: translate(-50%, -50%);
         }
@@ -42,7 +42,7 @@
             <a target="tela" href="facebook.html"><img src="imagens/botão-facebook.webp" alt="botão-facebook"></a>
         </section>
         <div>
-            <p>Feito com muito carinho @alex_jjunio 🖤</p>
+            <p>Navegue pela página usando o mouse. <br> @alex_jjunio 🖤</p>
         </div>
     </main>
 
