--- a/redes-sociais/index.html
+++ b/redes-sociais/index.html
@@ -9,12 +9,13 @@
         div {
             position: absolute;
             background-color: transparent;
-            top: 85%;
+            top: 90%;
             left: 50%;
             transform: translate(-50%, -50%);
         }
 
         div p {
+            font-size: 15pt;
             text-align: center;
             opacity: 0.5;
             transition: 0.5s;
@@ -42,7 +43,8 @@
             <a target="tela" href="facebook.html"><img src="imagens/botão-facebook.webp" alt="botão-facebook"></a>
         </section>
         <div>
-            <p>Navegue pela página usando o mouse. <br> @alex_jjunio 🖤</p>
+            <p>Navegue pela página usando o mouse. <br>
+                Troque a rede-social através dos botões <br> by: @alex_jjunio 🖤</p>
         </div>
     </main>
 
