--- a/redes-sociais/instagram.html
+++ b/redes-sociais/instagram.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/botões.css">
 </head>
 <body>
-    <img src="imagens/insta-tela.jpg" alt="instagram">
-    <a href="https://www.instagram.com/alex_jjunio/">ACESSE</a>
+    <img  src="imagens/insta-tela.jpg" alt="instagram">
+    <a target="_blank" href="https://www.instagram.com/alex_jjunio/">ACESSE</a>
 </body>
 </html>
