--- a/redes-sociais/linkedin.html
+++ b/redes-sociais/linkedin.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/link-tela.jpg" alt="linkedin">
-    <a href="https://www.linkedin.com/in/alex-junio-3a6b00214/">ACESSE</a>
+    <a  target="_blank"  href="https://www.linkedin.com/in/alex-junio-3a6b00214/">ACESSE</a>
 </body>
 </html>
