--- a/redes-sociais/facebook.html
+++ b/redes-sociais/facebook.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/botões.css">
 </head>
 <body>
-    <img src="imagens/face-tela.jpg" alt="facebook">
-    <a href="https://www.facebook.com/alex.juniomoreira/">ACESSE</a>
+    <img  src="imagens/face-tela.jpg" alt="facebook">
+    <a target="_blank" href="https://www.facebook.com/alex.juniomoreira/">ACESSE</a>
 </body>
 </html>
