--- a/redes-sociais/index.html
+++ b/redes-sociais/index.html
@@ -44,7 +44,7 @@
         </section>
         <div>
             <p>Navegue pela página usando o mouse. <br>
-                Troque a rede-social através dos botões <br> by: @alex_jjunio 🖤</p>
+                Troque a rede-social através dos botões <br> by: @alex_jjunio </p>
         </div>
     </main>
 
