--- a/central-de-links-002/index.html
+++ b/central-de-links-002/index.html
@@ -14,16 +14,16 @@
             <img src="imagens/gss.jpg" alt="Perfil de Gabriella">
             <ul>
                 <a href="#">
-                    <li>Faça sua encomenda</li>
+                    <li>Canal Youtube</li>
                 </a>
                 <a href="#">
                     <li>Facebook</li>
                 </a>
                 <a href="#">
-                    <li>Whatsapp</li>
+                    <li>Linkedin</li>
                 </a>
                 <a href="#">
-                    <li>Linkedin</li>
+                    <li>Orçamentos</li>
                 </a>
             </ul>
         </section>
