--- a/central-de-links/index.html
+++ b/central-de-links/index.html
@@ -35,7 +35,7 @@
                 </ul>
                 
             <footer>
-                Com muito carinho 🖤 by <a href=""">@alex_jjunio</a>
+                Com muito carinho 🖤 by <a href="">@alex_jjunio</a>
             </footer>
         </div>
 </body>
