--- a/central-de-links-002/index.html
+++ b/central-de-links-002/index.html
@@ -7,19 +7,21 @@
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <div>
-        <h1>Gabriella Sousa</h1>
-        <p>@<a href="#">gssgabriella</a></p>
-        <section>
+    <main class="container">
+        <section class="menu">
+            <h1>Gabriella Sousa</h1>
+            <p><a target="_blank" href="https://www.instagram.com/gssgabriella/">@gssgabriella</a></p>
+        </section>
+        <section class="container-item">
             <img src="imagens/gss.jpg" alt="Perfil de Gabriella">
             <ul>
-                <a href="#">
+                <a target="_blank" href="https://www.youtube.com/watch?v=owCQRt1r6iY">
                     <li>Canal Youtube</li>
                 </a>
-                <a href="#">
+                <a target="_blank" href="https://www.facebook.com/gabriella.sousa.167527">
                     <li>Facebook</li>
                 </a>
-                <a href="#">
+                <a target="_blank" href="https://www.linkedin.com/in/gabriella-sousa-36667623a/">
                     <li>Linkedin</li>
                 </a>
                 <a href="#">
@@ -28,6 +30,6 @@
             </ul>
         </section>
         <footer>Com muito carinho by @gssgabriella</footer>
-    </div>
+    </main>
 </body>
 </html>
