add central de links 3

--- a/central-de-links-003/index.html
+++ b/central-de-links-003/index.html
@@ -4,38 +4,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriella Sousa</title>
-    <link rel="stylesheet" href="estilo/central-de-links.css">
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
-<body>
-    <main class="container">
-        <div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <header class="cabecalho">
-                <h1>Gabriella Sousa</h1>
-                <p>Compartilhando arte.</p>
-            </header>
-            <section class="container-botoes">
-                <ul>
-                    <a href="">
-                        <li>Canal Youtube</li>
-                    </a>
-                    <a href="">
-                        <li>Facebook</li>
-                    </a>
-                    <a href="">
-                        <li>Linkedin</li>
-                    </a>
-                    <a href="">
-                        <li>Orçamentos</li>
-                    </a>
-                </ul>
-            </section>
-            <footer>
-                <p>Com muito carinho by @gssgabriella</p>
-            </footer>
-        </div>
-    </main>
+<body class="pink">
+    <div class="container">
+        <img class="perfil" src="imagens/gss.jpg" alt="Perfil de Gabriella">
+        <h1>Gabriella Sousa</h1>
+        <p class="subt">Compartilhando arte.</p>
+    <ul>
+        <li>
+            <a href="#">Canal Youtube</a>
+        </li>
+        <li>
+            <a href="#">Whatsapp</a>
+        </li>
+        <li>
+            <a href="#">Facebook</a>
+        </li>
+        <li>
+            <a href="#">Orçamentos</la>
+        </li>
+    </ul>
+    <footer>
+        Com muito carinho by @gssgabriella
+    </footer>
+</div>
 </body>
 </html>
