--- a/central-de-links/index.html
+++ b/central-de-links/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="meuestilo/style.css">
 </head>
-<body class="green">
+<body class="dark">
     
         <div class="container">
             <img src="imagens/alex.jpg" alt="Perfil de Alex">
