--- a/menu-drinks/index.html
+++ b/menu-drinks/index.html
@@ -6,6 +6,7 @@
     <title>Drinks</title>
     <link rel="stylesheet" href="estilo/style.css" media="all">
     <link rel="stylesheet" href="estilo/retrato.css" media="screen and (orientation: portrait)">
+    <link rel="stylesheet" href="estilo/paisagem.css" media="screen and (orientation: landscape)">
 </head>
 <body>
     <header>
@@ -69,6 +70,65 @@
         </ul>
         
     </section>
+
+    <section>
+        <h2 class="sub-titulo">Bebidas</h2>
+        <ul class="lista-1">
+            <li>
+                <div>
+                    <img class="produto" src="imgs/296_pepsi.png" alt="Coca-cola 200ml">
+                    <h3>...</h3>
+                    <p>...</p>
+                </div>
+                <strong>R$ <span>2</span>.90</strong>
+            </li>
+            <li>
+                <div>
+                    <img class="produto" src="imgs/pepsi-zero_350ml.png" alt="Coca-cola 2l">
+                    <h3>...</h3>
+                    <p>...</p>
+                </div>
+                <strong>R$ <span>12</span>.90</strong>
+            </li>
+            <li>
+                <div>
+                    <img class="produto" src="imgs/fanta-01.webp" alt="Coca-cola 600ml">
+                    <h3>...</h3>
+                    <p>...</p>
+                </div>
+                <strong>R$ <span>7</span>.90</strong>
+            </li>
+        </ul>
+
+        <ul class="lista-2">
+            <li>
+                <div>
+                    <img class="produto" src="imgs/fanta-02.webp" alt="Coca-cola 350ml">
+                    <h3>...</h3>
+                    <p>...</p>
+                </div>
+                <strong>R$ <span>7</span>.90</strong>
+            </li>
+            <li>
+                <div>
+                    <img class="produto" src="imgs/coca-cola-lata-350ml.png" alt="Coca-cola 200ml">
+                    <h3>...</h3>
+                    <p>...</p>
+                </div>
+                <strong>R$ <span>5</span>.90</strong>
+            </li>
+            <li>
+                <div>
+                    <img class="produto" src="imgs/coca-cola-lata-350ml-zero.png" alt="Coca-cola 200ml">
+                    <h3>...</h3>
+                    <p>...</p>
+                </div>
+                <strong>R$ <span>5</span>.90</strong>
+            </li>
+        </ul>
+        
+    </section>
+
     <footer>
         by: <a href="https://www.instagram.com/alex_jjunio/">@alex_jjunio</a>
     </footer>
