add fundo e color

--- a/tabela-brasileirao/index.html
+++ b/tabela-brasileirao/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="topo">
-        <h1>Jogos</h1>
+        <h1 style="text-shadow:1px 1px 1px rgba(0, 0, 0, 0.561) ;">Jogos</h1>
         <h2>21º Rodada</h2>
     </div>
 
@@ -94,18 +94,18 @@
                 </div>
                     <div class="placar">
                         <h3>
-                            <p></p>
+                            <p>1</p>
                         </h3>
                         <p class="x">
                             x
                         </p>
                         <h3>
-                            <p></p>
+                            <p>1</p>
                         </h3>
                     </div>
                     <div class="time-2 time">
-                        <img class="logo" src="imgs/atletico-go-2020.svg" alt="Logo Avaí">
-                        <p>Atlético-GO</p>
+                        <img class="logo" src="imgs/ceara.svg" alt="Logo Avaí">
+                        <p>Ceará</p>
                     </div>
             </li>
 
@@ -229,7 +229,7 @@
                     </div>
                     <div class="time-2 time">
                         <img class="logo" src="imgs/atletico-go-2020.svg" alt="Logo Avaí">
-                        <p>Atlético-GO</p>
+                        <p></p>
                     </div>
             </li>
 
