--- a/tabela-brasileirao/index.html
+++ b/tabela-brasileirao/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="estilo/retrato.css" media="screen and (orientation: portrait)">
 </head>
 <body>
-    <div class="topo">
+    <div id="divjogos" class="topo">
         <h1 style="text-shadow:1px 1px 1px rgba(0, 0, 0, 0.561) ;">Jogos</h1>
         <h2>21º Rodada</h2>
     </div>
@@ -22,7 +22,7 @@
                 <p class="info"><span class="data">Sáb 06/08/2022</span> <span class="local">Morumbi</span> <span class="hora">20:30</span></p>
                 <div class="time-1 time">
                     <p>São Paulo</p>
-                    <img class="logo" src="imgs/Flamengo-2018.svg" alt="Logo Goiás">
+                    <img class="logo" src="imgs/sao-paulo.svg" alt="Logo Goiás">
                 </div>
                     <div class="placar">
                         <h3>
@@ -136,7 +136,7 @@
     </section>
 
     <div class="topo">
-        <h1 style="color:#a7a7a7 ;">Próxima Rodada...</h1>
+        <h1 id="h1unico" style="color:black ;">Próxima Rodada...</h1>
         <h2>22º Rodada</h2>
     </div>
 
@@ -230,14 +230,14 @@
                     </div>
                     <div class="time-2 time">
                         <img class="logo" src="imgs/atletico-go-2020.svg" alt="Logo Avaí">
-                        <p></p>
+                        <p>Atlético-go</p>
                     </div>
             </li>
 
             <li>
                 <p class="info"><span class="data">Dom 14/08/2022</span> <span class="local">Couto pereira</span> <span class="hora">11:00</span></p>
                 <div class="time-1 time">
-                    <p>Atlético-MG</p>
+                    <p>Coritiba</p>
                     <img class="logo" src="imgs/coritiba.svg" alt="Logo Goiás">
                 </div>
                     <div class="placar">
@@ -253,13 +253,13 @@
                     </div>
                     <div class="time-2 time">
                         <img class="logo" src="imgs/atletico-mg.svg" alt="Logo Avaí">
-                        <p>Coritiba</p>
+                        <p>Atlético-MG</p>
                     </div>
             </li>
         </ul>
     </section>
     <footer>
-        <p>Feito por <a href="https://www.instagram.com/alex_jjunio/">@alex_jjunio</a></p>
+        <p>Feito por <a href="https://github.com/AlexJjunio">Alex_jjunio</a></p>
     </footer>
 </body>
 </html>
