--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -7,16 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pomodoro</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="script.js"></script>
+  <!-- <script defer type="module" src="js/index.js"></script> -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <main>
 
     <div class="timer">
-      <span>25</span>
+      <span class="minutes">05</span>
       <span>:</span>
-      <span>00</span>
+      <span class="seconds">00</span>
     </div>
 
     <div class="controls">
@@ -72,5 +72,6 @@
     </button>
   </footer>
 
+  <script src="js/index.js" type="module"></script>
 </body>
 </html>
