--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -7,9 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pomodoro</title>
   <link rel="stylesheet" href="style.css">
-  <!-- <script defer type="module" src="js/index.js"></script> -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-</head>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <body>
   <main>
 
