--- a/pomodoro-2.0/index.html
+++ b/pomodoro-2.0/index.html
@@ -15,7 +15,7 @@
   <main id="container">
   <div class="timer">
     <div class="hours">
-      <span class="minutes">01</span>
+      <span class="minutes">05</span>
       <span>:</span>
       <span class="seconds">00</span>
     </div>
@@ -26,6 +26,25 @@
         <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M18.18 34.2L34.2 24L18.18 13.8V34.2ZM24 48C20.72 48 17.62 47.37 14.7 46.11C11.78 44.85 9.23 43.13 7.05 40.95C4.87 38.77 3.15 36.22 1.89 33.3C0.63 30.38 0 27.28 0 24C0 20.72 0.63 17.62 1.89 14.7C3.15 11.78 4.87 9.23 7.05 7.05C9.23 4.87 11.78 3.15 14.7 1.89C17.62 0.63 20.72 0 24 0C27.28 0 30.38 0.63 33.3 1.89C36.22 3.15 38.77 4.87 40.95 7.05C43.13 9.23 44.85 11.78 46.11 14.7C47.37 17.62 48 20.72 48 24C48 27.28 47.37 30.38 46.11 33.3C44.85 36.22 43.13 38.77 40.95 40.95C38.77 43.13 36.22 44.85 33.3 46.11C30.38 47.37 27.28 48 24 48ZM24 44.4C29.6 44.4 34.4 42.4 38.4 38.4C42.4 34.4 44.4 29.6 44.4 24C44.4 18.4 42.4 13.6 38.4 9.6C34.4 5.6 29.6 3.6 24 3.6C18.4 3.6 13.6 5.6 9.6 9.6C5.6 13.6 3.6 18.4 3.6 24C3.6 29.6 5.6 34.4 9.6 38.4C13.6 42.4 18.4 44.4 24 44.4Z" fill="#323238"/>
           </svg>
+      </button>
+
+      <button class="pause hide">
+        <svg
+          width="48"
+          height="48"
+          viewBox="5 5 53 53"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M6 32C6 17.6454 17.6454 6 32 6C46.3546 6 58 17.6454 58 32C58 46.3546 46.3546 58 32 58C17.6454 58 6 46.3546 6 32ZM32 10C19.8546 10 10 19.8546 10 32C10 44.1454 19.8546 54 32 54C44.1454 54 54 44.1454 54 32C54 19.8546 44.1454 10 32 10Z"
+            fill="#323238" />
+          <path
+            d="M26 22C27.1046 22 28 22.8954 28 24V40C28 41.1046 27.1046 42 26 42C24.8954 42 24 41.1046 24 40V24C24 22.8954 24.8954 22 26 22Z"
+            fill="#323238" />
+          <path
+            d="M38 22C39.1046 22 40 22.8954 40 24V40C40 41.1046 39.1046 42 38 42C36.8954 42 36 41.1046 36 40V24C36 22.8954 36.8954 22 38 22Z"
+            fill="#323238" />
+        </svg>
       </button>
 
       <button class="stop">
