--- a/spa-universe/pages/home.html
+++ b/spa-universe/pages/home.html
@@ -1,4 +1,5 @@
-<div class="home-container">
-  <h1>Explore o universo</h1>
-  <button>Quero saber mais</button>
-</div>
+<div class="bg-home" ></div>
+  <section id="home">
+    <h1>Explore o universo</h1>
+    <button>Quero saber mais</button>
+  </section>
