--- a/spa-universe/pages/home.html
+++ b/spa-universe/pages/home.html
@@ -1,5 +1,5 @@
 <div class="bg-home" ></div>
   <section id="home">
     <h1>Explore o universo</h1>
-    <button>Quero saber mais</button>
+    <a class="button" href="/universe">Quero saber mais</button>
   </section>
